tajo-core-tests/src/test/resources/results/TestSQLAnalyzer/errors/join_1.result
ERROR: syntax error at or near "OUTER"
LINE 4:   LEFTT OUTER JOIN customer ON (purc_customer_id = c_customer_id)
                ^^^^^